cleanup in gradle files and gradle tasks

--- a/ben_manes_versions_plugin.gradle
+++ b/ben_manes_versions_plugin.gradle
@@ -10,3 +10,7 @@ dependencyUpdates {
         isNonStable(it.candidate.version)
     }
 }
+
+task everydayDependencyUpdates(type: Copy, dependsOn: 'dependencyUpdates') {
+    group = 'Everyday'
+}
