--- a/common.gradle
+++ b/common.gradle
@@ -58,6 +58,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'jacoco'
 apply plugin: "com.github.ben-manes.versions"
+apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
 apply from: "$project.rootDir/jacoco.gradle"
 apply from: "$project.rootDir/ktlint.gradle"
 apply from: "$project.rootDir/ben_manes_versions_plugin.gradle"
