--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,7 @@
  */
 
 apply plugin: 'com.android.application'
-apply from: '../common.gradle'
-apply from: 'https://raw.githubusercontent.com/JakeWharton/SdkSearch/master/gradle/projectDependencyGraph.gradle'
+apply from: "$project.rootDir/common.gradle"
 
 android {
     defaultConfig {
