--- a/models/build.gradle
+++ b/models/build.gradle
@@ -16,7 +16,7 @@
  */
 
 apply plugin: 'com.android.library'
-apply from: '../common.gradle'
+apply from: "$project.rootDir/common.gradle"
 
 dependencies {
     implementation project(Modules.commons)
