--- a/settings/build.gradle
+++ b/settings/build.gradle
@@ -16,8 +16,7 @@
  */
 
 apply plugin: 'com.android.library'
-apply from: '../common.gradle'
-apply plugin: 'kotlin-android'
+apply from: "$project.rootDir/common.gradle"
 
 dependencies {
 
