added Detekt plugin and configured some custom rules in /config/detekt/detakt.yml still reports some errors but decision is needed as to how to handle these

--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,14 @@ buildscript {
     repositories {
         google()
         jcenter()
+        gradlePluginPortal()
     }
     dependencies {
         classpath AndroidLibraries.gradle
         classpath KotlinLibraries.kotlinGradlePlugin
         classpath Libraries.gradleVersionsPlugin
         classpath Libraries.jacocoPlugin
+        classpath Libraries.detektPlugin
     }
 }
 
