update session preset usecase + tests

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ documentation/.~lock._WORK_IN_PROGRESS.doc#
 documentation/~$ORK_IN_PROGRESS.doc
 documentation/~WRL0002.tmp
 __GRAPHICS/
+domain/jacoco.exec
