--- a/conf_plugin_detekt.gradle
+++ b/conf_plugin_detekt.gradle
@@ -1,5 +1,11 @@
+apply plugin: "io.gitlab.arturbosch.detekt"
+
 detekt {
     toolVersion = "1.16.0-RC3"
     config = files("$project.rootDir/config/detekt/detekt.yml")
     buildUponDefaultConfig = true
+}
+
+task everydayDetekt(type: Copy, dependsOn: 'detekt') {
+    group = 'Everyday'
 }
