--- a/conf_plugin_jacoco.gradle
+++ b/conf_plugin_jacoco.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'jacoco'
+
 jacoco {
     toolVersion = Versions.jacoco
 }
@@ -6,10 +8,9 @@ tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
 }
 
-
 //task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
-task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
-    group = 'Everyday'
+task everydayJacocoModulesTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
+    //we don't need this task to be displayed in the tasks group with the others, as we will only ever launch the child everydayJacocoGroupedReports task
     reports {
         xml.enabled = true
         html.enabled = true
@@ -42,7 +43,7 @@ task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
 }
 
 // This task launches the tests and copies the reports to /reports/ directory
-task everydayJacocoReport(type: Copy, dependsOn: 'jacocoTestReport') {
+task everydayJacocoGroupedReports(type: Copy, dependsOn: 'everydayJacocoModulesTestReport') {
     group = 'Everyday'
     from "$buildDir/reports/"
     into "../reports/$project.name"
