--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
         classpath Libraries.gradleVersionsPlugin
         classpath Libraries.jacocoPlugin
         classpath Libraries.detektPlugin
+        classpath AndroidLibraries.navigation_safe_args
     }
 }
 
