--- a/common.gradle
+++ b/common.gradle
@@ -57,6 +57,7 @@ android {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
+apply plugin: "androidx.navigation.safeargs.kotlin"
 apply from: "$project.rootDir/conf_plugin_jacoco.gradle"
 apply from: "$project.rootDir/conf_plugin_ben_manes_versions.gradle"
 apply from: "$project.rootDir/conf_plugin_detekt.gradle"
