WIP on splitting session presets creation/edition into type-dedicated dialogs

--- a/common.gradle
+++ b/common.gradle
@@ -28,7 +28,9 @@ android {
             testCoverageEnabled true
         }
         release {
-            minifyEnabled true
+            testCoverageEnabled false
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     buildFeatures {
