switched from explicit context dispatchers and scope launches to viewmodelscope from new kotlin lifdecycle library

--- a/common.gradle
+++ b/common.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation AndroidLibraries.lifecycle_commons_java8
     implementation AndroidLibraries.lifecycle_viewmodel
     implementation AndroidLibraries.lifecycle_livedata
+    implementation AndroidLibraries.lifecycle_viewmodel_ktx
 
     // Unit Tests
     testImplementation TestLibraries.junit
