--- a/conf_plugin_jacoco.gradle
+++ b/conf_plugin_jacoco.gradle
@@ -12,7 +12,7 @@ tasks.withType(Test) {
 task everydayJacocoModulesTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest']) {
     //we don't need this task to be displayed in the tasks group with the others, as we will only ever launch the child everydayJacocoGroupedReports task
     reports {
-        xml.enabled = true
+        xml.enabled = false
         html.enabled = true
     }
 
