--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ buildscript {
         classpath KotlinLibraries.kotlinGradlePlugin
         classpath Libraries.gradleVersionsPlugin
         classpath Libraries.jacocoPlugin
-        classpath Libraries.detektPlugin
+//        classpath Libraries.detektPlugin
         classpath AndroidLibraries.navigation_safe_args
     }
 }
