new module for running session implemented nav from "home" selecting a session preset, to session activity, retrieving the session preset there

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation project(Modules.screens)
     implementation project(Modules.domain)
     implementation project(Modules.settings)
+    implementation project(Modules.session)
 
     implementation Libraries.stetho
     implementation Libraries.lottie
